--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,12 +31,30 @@
             android:background="@android:color/darker_gray"
             android:scaleType="centerCrop" />
 
-        <Button
-            android:id="@+id/pick_image_button"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
-            android:text="@string/pick_image_button" />
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/take_photo_button"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="@string/take_photo_button"
+                android:layout_weight="0.5"
+                android:textSize="10sp"/>
+
+            <Button
+                android:layout_weight="0.5"
+                android:id="@+id/pick_image_button"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="@string/pick_image_button"
+                android:textSize="10sp"/>
+        </LinearLayout>
 
         <View
             android:layout_width="match_parent"
