--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -22,38 +23,48 @@
         android:gravity="center_horizontal"
         android:orientation="vertical">
 
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="240dp">
 
-        <ImageView
-            android:id="@+id/face_image_view"
-            android:layout_width="180dp"
-            android:layout_height="240dp"
-            android:adjustViewBounds="true"
-            android:background="@android:color/darker_gray"
-            android:scaleType="centerCrop" />
+            <ImageView
+                android:id="@+id/face_image_view"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:adjustViewBounds="true"
+                android:background="@android:color/darker_gray"
+                android:maxWidth="240dp"
+                android:maxHeight="240dp"
+                android:scaleType="centerCrop"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
         <LinearLayout
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="8dp"
             android:layout_marginTop="12dp"
+            android:layout_marginRight="8dp"
             android:orientation="horizontal">
 
             <Button
                 android:id="@+id/take_photo_button"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="@string/take_photo_button"
                 android:layout_weight="0.5"
-                android:textSize="10sp"/>
+                android:text="@string/take_photo_button"
+                android:textSize="10sp" />
 
             <Button
-                android:layout_weight="0.5"
                 android:id="@+id/pick_image_button"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_weight="0.5"
                 android:text="@string/pick_image_button"
-                android:textSize="10sp"/>
+                android:textSize="10sp" />
         </LinearLayout>
 
         <View
